<resources>
    <string name="app_name">Quiz Me</string>
    <string name="sign_up_text">Not yet registered? Sign up here!</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="sign_in">Log In</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">quiz_me@hkr.se</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="menu_home">Previous Result</string>
    <string name="menu_take_quiz">Take Quiz</string>
    <string name="menu_create_quiz">Create Quiz</string>
    <string name="menu_my_quizzes">My Quizzes</string>
    <string name="menu_share">About Us</string>

    <string name="facebook_app_id">1239058189625752</string>
    <string name="fb_login_protocol_scheme">fb1239058189625752</string>

</resources>
