<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_take_quiz">


    <fragment
        android:id="@+id/nav_take_quiz"
        android:name="com.hkr.quizme.ui.takeQuiz.TakeQuizFragment"
        android:label="@string/menu_take_quiz"
        tools:layout="@layout/fragment_take_quiz" />

    <fragment
        android:id="@+id/nav_create_quiz"
        android:name="com.hkr.quizme.ui.createQuiz.CreateQuizFragment"
        android:label="@string/menu_create_quiz"
        tools:layout="@layout/fragment_create_quiz" />

    <fragment
        android:id="@+id/nav_my_quizzes"
        android:name="com.hkr.quizme.ui.myQuizzes.MyQuizzesFragment"
        android:label="@string/menu_my_quizzes"
        tools:layout="@layout/fragment_my_quizzes" />

    <fragment
        android:id="@+id/nav_prev_result"
        android:name="com.hkr.quizme.ui.previousResult.PrevResultFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_prev_result" />

    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.hkr.quizme.ui.aboutUs.AboutUsFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_about_us" />
    <fragment
        android:id="@+id/choose_quiz"
        android:name="com.hkr.quizme.ui.chooseQuiz.ChooseQuizFragment"
        android:label="Choose Quiz"
        tools:layout="@layout/fragment_choose_quiz" />


</navigation>